# Crowdi

./: .gitignore  README.md  notification_error.py  patch_hastags.py  pyproject.toml
app/: .gitignore  crowdi.db  db.py  main.py  patch_hastags.py  routes.py  service.py
app/data/: cities.py  swiss_major_cities.csv
app/routes/: __init__.py  auth.py  conversations.py  homepage.py  items.py  notifications.py  requests.py
app/static/: palette.scss  style.css
app/static/js/: location.js  locationToggle.js  map.js  tabs.js
app/templates/: base.html  borrow_tab.html  conversation.html  conversations.html  home.html  lend_tab.html  my_requests_tab.html  notification_snippet.html  profile.html  questions.html  requests_tab.html  txt.txt  user_profile.html
app/utils/: files.py
crowdi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
