[project]
name = "crowdi"
version = "0.1.0"
description = "Location-based polling and question-answering web app"
authors = [{name = "nwegmann", email = "nathan.wegmann@unifr.ch"}]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
